# skyeye

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/skyeye/: __init__.py  cli.py  models.py  report.py  simulator.py
src/skyeye/detection/: __init__.py  classifier.py  defect_detector.py  segmenter.py
src/skyeye/infrastructure/: __init__.py  bridges.py  buildings.py  powerlines.py
src/skyeye/inspection/: __init__.py  flight.py  report.py  tracker.py
tests/: test_benchmark.py  test_core.py  test_detection.py  test_infrastructure.py  test_inspection.py  test_integration.py  test_models.py  test_report.py  test_simulator.py
